Fixed bug in docker-compose file + removed calls to Yahoo finance to avoid throttling

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,8 +35,8 @@ services:
     depends_on:
       db:
         condition: service_started
-      redis:
-        condition: service_started
+#      redis:
+#        condition: service_started
 
 volumes:
   postgres_vol:
